# lofigirl

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.archlinux  Dockerfile.arm64  Dockerfile.armhf  LICENSE  README.md  example_config.toml
.github/: dependabot.yml
.github/workflows/: artifacts.yml  audit.yml  build.yml  package.yml  publish.yml
lofigirl/: Cargo.toml
lofigirl/src/: config.rs  listener.rs  main.rs  worker.rs
lofigirl_client/: Cargo.toml  README.md
lofigirl_client/src/: config.rs  listener.rs  main.rs  worker.rs
lofigirl_flutter_client/: .gitignore  README.md  example_secrets.json  pubspec.yaml
lofigirl_flutter_client/android/app/: build.gradle
lofigirl_flutter_client/android/app/src/main/: AndroidManifest.xml
lofigirl_flutter_client/android/app/src/main/kotlin/com/example/lofigirl_flutter_client/: MainActivity.kt
lofigirl_flutter_client/android/app/src/profile/: AndroidManifest.xml
lofigirl_flutter_client/ios/Runner/: Info.plist
lofigirl_flutter_client/ios/Runner.xcodeproj/: project.pbxproj
lofigirl_flutter_client/lib/: config.dart  encrypt.dart  jwt.dart  main.dart  secret.dart  security.dart  settings.dart
lofigirl_flutter_client/linux/: CMakeLists.txt  my_application.cc
lofigirl_flutter_client/macos/Runner.xcodeproj/: project.pbxproj
lofigirl_flutter_client/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
lofigirl_flutter_client/macos/Runner/Configs/: AppInfo.xcconfig
lofigirl_flutter_client/test/: basic_test.dart  widget_test.dart
lofigirl_flutter_client/web/: index.html  manifest.json
lofigirl_flutter_client/windows/: CMakeLists.txt
lofigirl_flutter_client/windows/runner/: Runner.rc  main.cpp
lofigirl_frontend/: Cargo.toml  README.md
lofigirl_frontend/src/: lib.rs  storage.rs  view.rs
lofigirl_listen/: Cargo.toml
lofigirl_listen/src/: listener.rs
lofigirl_server/: Cargo.toml  README.md  token.db  token.db-shm  token.db-wal
lofigirl_server/src/: config.rs  main.rs  server.rs  session.rs  util.rs  worker.rs
lofigirl_server/src/webserver/: endpoints.rs  mod.rs
lofigirl_shared/: Cargo.toml
lofigirl_shared/src/: api.rs  config.rs  lib.rs  listener.rs  track.rs
lofigirl_shared_common/: Cargo.toml
lofigirl_shared_common/src/: api.rs  config.rs  encrpyt.rs  encrypt.rs  jwt.rs  lib.rs  track.rs
lofigirl_shared_listen/: Cargo.toml
lofigirl_shared_listen/src/: listener.rs
lofigirl_sys/: Cargo.toml
lofigirl_sys/src/: capture.rs  image.rs  lib.rs  track.rs
lofigirl_web_client/: Cargo.toml  Makefile.toml  README.md  index.html
lofigirl_web_client/src/: lib.rs  storage.rs  view.rs
migrations/: 20210525000135_table.sql
secrets/: example_key.aes
