[workspace]
members = [
    "lofigirl_client", 
    "lofigirl_server",
    "lofigirl_shared_common",
    "lofigirl_shared_listen",
    "lofigirl_sys", 
    "lofigirl_web_client",
]
resolver = "2"

[profile.release]
lto = true

[profile.release.package.lofigirl_web_client]
opt-level = 'z'
codegen-units = 1
