[package]
name = "lofigirl"
version = "0.1.0"
authors = ["Gokberk Kocak <gokberkkocak@gmail.com>"]
edition = "2018"

[dependencies]
lofigirl_sys = { path = "../lofigirl_sys"}
toml = "0.5"
url = "2.2"
serde = { version = "1.0", features = ["derive"]}
tokio = { version = "1.5", features = ["rt", "fs", "time"] }
structopt = "0.3"
rustfm-scrobble = "1.1"
listenbrainz = "0.2"
anyhow = "1.0"
thiserror = "1.0"
once_cell = "1.7"