[package]
name = "lofigirl_client"
version = "0.2.0"
authors = ["Gokberk Kocak <gokberkkocak@gmail.com>"]
edition = "2018"

[dependencies]
lofigirl_sys = { path = "../lofigirl_sys", optional = true }
lofigirl_shared_common = { path = "../lofigirl_shared_common"}
lofigirl_shared_listen = { path = "../lofigirl_shared_listen"}
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
toml = "0.5"
serde = { version = "1.0", features = ["derive"]}
tokio = { version = "1.7", features = ["rt", "fs", "time"] }
structopt = "0.3"
anyhow = "1.0"
thiserror = "1.0"
url = { version = "2.2", optional = true}
notify-rust = { version = "4.5", optional = true }


[features]
standalone = ["lofigirl_sys", "url"]
notify = ["notify-rust"]