[package]
name = "lofigirl_client"
version = "0.3.0"
authors = ["Gokberk Kocak <gokberkkocak@gmail.com>"]
edition = "2021"

[dependencies]
lofigirl_sys = { path = "../lofigirl_sys", optional = true }
lofigirl_shared_common = { path = "../lofigirl_shared_common"}
lofigirl_shared_listen = { path = "../lofigirl_shared_listen"}
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
toml = "0.6"
serde = { version = "1.0", features = ["derive"]}
tokio = { version = "1.22", features = ["rt", "fs", "time"] }
clap = { version = "4.1", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
url = { version = "2.3", optional = true}
notify-rust = { version = "4.7", optional = true }


[features]
standalone = ["lofigirl_sys", "url"]
notify = ["notify-rust"]