[package]
name = "lofigirl_client"
version = "0.3.0"
authors = ["Gokberk Kocak <gokberkkocak@gmail.com>"]
edition = "2021"

[dependencies]
lofigirl_sys = { path = "../lofigirl_sys", optional = true }
lofigirl_shared_common = { path = "../lofigirl_shared_common"}
lofigirl_shared_listen = { path = "../lofigirl_shared_listen"}
reqwest = { version = "0.12", features = ["json"] }
reqwest-websocket = "0.4"
serde_json = "1.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"]}
tokio = { version = "1.40", features = ["rt", "fs", "time", "sync"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"
notify-rust = { version = "4.11", optional = true }
percent-encoding = "2.3"
futures-util = "0.3"


[features]
standalone = ["lofigirl_sys"]
notify = ["notify-rust"]
