[package]
name = "lofigirl_server"
version = "0.3.0"
authors = ["Gokberk Kocak <gokberkkocak@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lofigirl_sys = { path = "../lofigirl_sys"}
lofigirl_shared_common = { path = "../lofigirl_shared_common"}
lofigirl_shared_listen = { path = "../lofigirl_shared_listen"}
serde = { version = "1.0", features = ["derive"] }
actix-web = "4.3"
actix-cors = "0.6"
actix-rt = "2.8"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
uuid = { version = "1.4", features = ["v4"] }
thiserror = "1.0"
clap = { version = "4.3", features = ["derive"] }
toml = "0.7"
anyhow = "1.0"
url = "2.3"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"