[package]
name = "lofigirl_server"
version = "0.3.0"
authors = ["Gokberk Kocak <gokberkkocak@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lofigirl_sys = { path = "../lofigirl_sys"}
lofigirl_shared_common = { path = "../lofigirl_shared_common"}
lofigirl_shared_listen = { path = "../lofigirl_shared_listen"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.11"
actix-web-httpauth = "0.8"
actix-cors = "0.7"
actix-rt = "2.10"
actix-ws = "0.3"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls"] }
uuid = { version = "1.16", features = ["v4"] }
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
url = "2.5"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.47", features = ["sync"] }
futures-util = "0.3"
