[package]
name = "lofigirl_shared"
version = "0.1.0"
authors = ["Gokberk Kocak <gokberkkocak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.5", features = ["fs"] }
anyhow = "1.0"
thiserror = "1.0"
strsim = "0.10"
once_cell = "1.7"