[package]
name = "lofigirl_shared_common"
version = "0.3.0"
authors = ["Gokberk Kocak <gokberkkocak@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }

anyhow = "1.0"
thiserror = "1.0"
strsim = "0.11"
tracing = "0.1"