[package]
name = "lofigirl_shared_common"
version = "0.3.0"
authors = ["Gokberk Kocak <gokberkkocak@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }

aes-gcm = "0.10"
anyhow = "1.0"
base64 = "0.22"
strsim = "0.11"
thiserror = "1.0"
tracing = "0.1"
typenum = "1.17"
jwt-compact = "0.8"
chrono = "0.4"