[package]
name = "lofigirl_shared_listen"
version = "0.2.0"
authors = ["Gokberk Kocak <gokberkkocak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lofigirl_shared_common = {path = "../lofigirl_shared_common"}
notify-rust = { version = "4.5", optional = true }
rustfm-scrobble = "1.1"
listenbrainz = "0.4"
anyhow = "1.0"
thiserror = "1.0"
