[package]
name = "lofigirl_sys"
version = "0.3.0"
authors = ["Gokberk Kocak <gokberkkocak@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lofigirl_shared_common = { path = "../lofigirl_shared_common"}
opencv = "0.78"
ytextract = { version = "0.11", optional = true}
rustube = "0.6"
leptess = "0.14"
anyhow = "1.0"
thiserror = "1.0"
url = "2.3"
tracing = "0.1"

[features]
use_ytextract = ["ytextract"]