[package]
name = "lofigirl_sys"
version = "0.3.0"
authors = ["Gokberk Kocak <gokberkkocak@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lofigirl_shared_common = { path = "../lofigirl_shared_common"}
opencv = { version = "0.94", features = ["clang-runtime"] }
rustube = { version = "0.6", optional = true }
rusty_ytdl = { git = "https://github.com/Mithronn/rusty_ytdl/", branch = "main"}
leptess = "0.14"
anyhow = "1.0"
thiserror = "2.0"
url = "2.5"
tracing = "0.1"
tempfile = "3.16"
rand = "0.9"

[features]
alt_yt_backend = ["rustube"]
