[package]
name = "lofigirl_web_client"
version = "0.3.0"
description = "App Description"
categories = ["category"]
readme = "./README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies]
anyhow = "1.0"
gloo-console = "0.3"
gloo-net = "0.6"
gloo-storage = "0.3"
seed = "0.10"
serde-json-wasm = "1.0"
lofigirl_shared_common = { path = "../lofigirl_shared_common"}

[dependencies.uuid]
version = "1.16"
features = ["v4", "rng-getrandom"]

[dependencies.getrandom]
version = "0.3"
features = ["wasm_js"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
